k8s-artifacts/kuma/kuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma-gui
  namespace: kuma-system
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: kuma.blocksafe.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuma-control-plane
                port:
                  number: 5681
